# oryksbot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/bot_control/: CMakeLists.txt  package.xml
src/bot_control/launch/: bot_control.launch  bot_joy.launch  bot_simple_twist.launch
src/bot_control/src/: bot_joy.py  bot_simple_twist_pub.py
src/bot_description/: frames.gv  package.xml
src/bot_description/CAD/: 3.3V 500Mah Battery v2.SLDPRT  Brass_Coupling.SLDPRT  Caster Assembly.SLDASM  Castor_Supporter.SLDPRT  Chassis_Main_Part.SLDPRT  Chassis_Secon_Back_Part_one.SLDPRT  Chassis_Secon_Front_Part.SLDPRT  L298N.SLDPRT  Motor bracket assembly.SLDASM  NEMA_17_CONNECTOR.SLDASM  Part5_hex screw.SLDPRT  Part5_hex screw_35mm.SLDPRT  Pololo_Bracket.SLDPRT  Pololu_Ball_Caster_with_1in_Plastic_Ball.SLDPRT  RspCameraMia.SLDPRT  Wheel Coupler assembly.SLDASM  Wheel38mm85mmdia.SLDPRT  rpilidar_connector.SLDASM  rplidar_main.SLDPRT
src/bot_description/launch/: bot_description.launch  gazebo.launch  rviz.launch
src/bot_description/meshes/: base_link.STL  caster.STL  left_wheel.STL  right_wheel.STL
src/bot_description/rviz/: default.rviz  laser.rviz
src/bot_description/urdf/: bot copy.xacro  bot.xacro  bot_properties.xacro  gazebo_plugins.xacro  gazebo_properties.xacro  materials.xacro
src/bot_gazebo/: frames.gv  package.xml
src/bot_gazebo/launch/: bot_emptyworld.launch  bot_gazebo.launch  turtlebot3_house.launch  turtlebot3_world.launch
src/bot_mapping/: CMakeLists.txt  package.xml
src/bot_navigation/: package.xml
(+14 files in other folders)
