<?xml version="1.0"?>
<package format="2">
  <name>bot_control</name>
  <version>0.0.0</version>
  <description>The bot_control package</description>

  <maintainer email="lyle@todo.todo">lyle</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
